[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "setuptools-scm"]

[project]
name = "ml-cr-aniso"
version = "0.1.0"
description = "Identifying nearby sources of ultra-high-energy cosmic rays with deep learning"
requires-python = "==3.8.20"
dependencies = [
    "tensorflow==2.6.5",
    "numpy~=1.19.2",
    "astropy~=4.2",
    "PyAstronomy==0.14.0",
    "healpy==1.16.5",
    "matplotlib==3.1.2",
    "pandas==1.0.0",
    "ray[tune]==1.1.0",
    "aiohttp==3.6.0",
    "aioredis==1.3.1"
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["pkg*"]
namespaces = false
